workding on query