@@ -84,7 +84,7 @@ public class IndexServer extends GenericIndexServer {
         Map.Entry entry;
         String word;
         List docList;
-        Map<String, Integer> tf;
+        Map<String, Long> tf;
         
         while(iter.hasNext()){
             entry = (Map.Entry) iter.next();
@@ -96,13 +96,14 @@ public class IndexServer extends GenericIndexServer {
             
             for (int j=0; j<docList.size(); j++) {
                temp = (Map) docList.get(j);
-               tf = (Map<String, Integer>) parser.parse( (String) temp.get("tf"), containerFactory);
+               tf = (Map<String, Long>) parser.parse( (String) temp.get("tf"), containerFactory);
+               
                item = new DocItem( 
                        (String) temp.get("id"), 
                        ((Double) temp.get("score")).doubleValue(), 
-                       (String) temp.get("caption"), 
                        (String) temp.get("url"), 
-                       (HashMap<String, Integer>) tf
+                       (String) temp.get("caption"), 
+                       (HashMap<String, Long>) tf
                     );
                listDocItem.add(item);
             }
@@ -126,57 +127,163 @@ public class IndexServer extends GenericIndexServer {
    *
    * Fill in this method to do something useful!
    */
-  private boolean endSearching(int []index, int [] size)
-  {
-      int i = 0;
-      for(int temp: index)
-          if(temp > size[i++])
+  
+  private boolean endSearching(int []index, int [] size) {
+      
+      System.out.println("no end");
+      
+      int i = 0, temp;
+      
+      for(int j=0; j<index.length; j++) {
+          
+          temp = index[j];
+          
+          if(temp > size[i++]) {
               return true;
-
+          }
+      }
       return false;
   }
-
+  
   public List<QueryHit> processQuery(String query) {
+      
+      System.out.println("Processing query '" + query + "'");
+      ArrayList<QueryHit> result = new ArrayList<QueryHit>();
+      
+      // Split query String into words
+      String [] words = query.split(" "); 
+      int totalWords = words.length;
+      
+      ArrayList<String> queryWords = new ArrayList<String>();
+      HashMap<String, Integer> searchMap = new HashMap<String, Integer>();
+      
+      for (int i=0; i < totalWords; i++) {
+          if (map.get(words[i]) == null) {
+              return result;
+          }
+          queryWords.add(words[i]);
+          searchMap.put(words[i], new Integer(0));
+      }
+      
+      // start from first word 
+      String nextWord = queryWords.get(0);
+      int min = map.get(nextWord).get(0).getIntId();
+      
+      if (totalWords == 1 && map.get(nextWord) != null) {
+          // single word query
+          for (DocItem item: map.get(nextWord)) {
+              result.add( new QueryHit(item.getIdentifier(), calScore(words, item)) );
+          }
+      } else { 
+          // multiple word query
+          while ( searchEnd(searchMap) ) {
+              System.out.println(nextWord);
+
+              String word, preWord;
+              int pos, prePos;
+              DocItem foundDocItem;
+              
+              // 1. check if we found a result
+              for (int i=1; i<totalWords; i++) {
+                  word = queryWords.get(i);
+                  preWord = queryWords.get(i-1); 
+                  pos = searchMap.get(word).intValue();
+                  prePos = searchMap.get(preWord).intValue();
+                  if (map.get(word).get(pos).getIntId() != map.get(word).get(pos).getIntId()) {
+                      break;
+                  }
+
+                  // found one word
+                  foundDocItem = map.get(word).get(pos);
+                  result.add(new QueryHit(foundDocItem.getIdentifier(), foundDocItem.getScore()) );
+              }
+
+              // 2. get smallest doc id among all words
+              Integer temp;
+
+              // find the word where the pointer have smallest doc id
+              for (String curWord : queryWords) {
+                  pos = searchMap.get(curWord).intValue();
+                  if (map.get(curWord).get(pos).getIntId() < min) {
+                      min = map.get(curWord).get(pos).getIntId();
+                      nextWord = curWord;
+                  }
+              }
+              temp = searchMap.get(nextWord);
+              searchMap.put(nextWord, new Integer(temp.intValue() + 1));
+          }
+      }
+      System.out.println(result.size());
+      
+      return result;
+  }
+  
+  public static boolean searchEnd(HashMap<String, Integer> searchMap) {
+      for (Map.Entry<String, Integer> entry : searchMap.entrySet() ) {
+          // entry.getValue(): index of DocItemList,  length - 1
+          if (entry.getValue() == map.get(entry.getKey()).size() ) {
+              return false;
+          }
+      }
+      return true;
+  }
+
+  public List<QueryHit> processQuery2(String query) {
 
       System.out.println("Processing query '" + query + "'");
+      ArrayList<QueryHit> result = new ArrayList<QueryHit>();
+      
       // Split query String into words
       String [] words = query.split(" "); 
       int totalWords = words.length;
 
-      int[] index = new int[totalWords];        
-      int []size = new int[totalWords];
+      int [] index = new int[totalWords];        
+      int [] size = new int[totalWords];
       int maxId = Integer.MIN_VALUE;
-      for(int i = 0 ; i < totalWords;i ++){
+      
+      
+      for (int i=0; i < totalWords; i++) {
+          if (map.get(words[i]) == null) {
+              return result;
+          }
           size[i] = map.get(words[i]).size();
-          maxId = Math.max(maxId,  map.get(words[i]).get(0).getIntId() );
+          maxId = Math.max(maxId, map.get(words[i]).get(0).getIntId() );
+          System.out.println(maxId);
       }
 
+      
       // Start searching
-      ArrayList<QueryHit> result = new ArrayList<QueryHit>();
       
       while(true){
           int i = 0;
           while(i < totalWords){
 
               while( map.get(words[i]).get(index[i]).getIntId() < maxId) {
-                  index[i] ++;
+                  index[i]++;
               }                
+              
 
               if(map.get(words[i]).get(index[i]).getIntId() > maxId)
               {
                   maxId = map.get(words[i]).get(index[i]).getIntId();
                   break;
               }
+              
 
-              if(i == (words.length-1)){
+              if( i == (words.length-1) ){
                   DocItem tempDocItem = map.get(words[i]).get(index[i]);
-                 // result.add(QueryHit(tempDocItem.getIdentifier(), calScore(words, tempDocItem) ));
-                  for(int j = 0; j < totalWords; j++)
-                      index[j] ++;
+                  System.out.println(tempDocItem.getIdentifier());
+                  result.add(new QueryHit(tempDocItem.getIdentifier(), calScore(words, tempDocItem) ));
+                  for(int j = 0; j < totalWords; j++) {
+                      index[j]++;
+                  }
               }
+              
+              
               i++;
           }// while(i < )
           if(endSearching(index, size)) {
+              System.out.println("end");
               return result;
           }
       }// while(1)
@@ -185,37 +292,47 @@ public class IndexServer extends GenericIndexServer {
   private double calScore(String [] words, DocItem docItem){
       HashMap<String, Double> queryTf = new HashMap<String, Double>();
       HashMap<String, Double> idf = new HashMap<String, Double>();
-      
+
       double de1 = 0;
       double de2 = 0;
       double nu = 0;
 
-      for(String word: words){
-        if(!queryTf.containsKey(word)) {
-          queryTf.put(word, new Double(1)); 
-        } else {
-          queryTf.put(word, Double.valueOf( queryTf.get(word) + 1)); 
-        }
-        // TODO make "totalDocument" a global double variable, for PA4, it should be 200
-        //idf.put(word, Math.log10((totalDocument/((double)map.get(word).size()) )) );
+      String word;
+      for (int i=0; i< words.length; i++) {
+          word = words[i];
+
+          if ( !queryTf.containsKey(word) ) {
+              queryTf.put(word, new Double(1)); 
+          } else {
+              queryTf.put(word, Double.valueOf( queryTf.get(word) + 1)); 
+          }
+          // TODO make "totalDocument" a global double variable, for PA4, it should be 200
+          double totalDocument = 200.0;
+          idf.put(word, Math.log10((totalDocument/((double)map.get(word).size()) )) );
       }
 
       double result = 0;
-      for(String word: words){
-        double temp1 = queryTf.get(word) * idf.get(word);
-        double temp2 = docItem.tf.get(word) * idf.get(word);
-        nu += temp1 * temp2;
-        de1 += temp1 * temp1;
-        de2 += temp2 * temp2;
+      for (int i=0; i< words.length; i++) {
+          word = words[i];
+          
+          double temp1 = queryTf.get(word) * idf.get(word);
+          double temp2 = docItem.tf.get(word) * idf.get(word);
+          nu += temp1 * temp2;
+          de1 += temp1 * temp1;
+          de2 += temp2 * temp2;
       }
 
-      if(de2 == 0)
-        return 0;
+
+      if(de2 == 0) {
+          return 0;
+      }
 
       result = nu / (Math.sqrt(de1) * Math.sqrt(de2));
-      
+
+      System.out.println("cal done");
       return result;
-    }
+  }
+  
   /**
    * Parse the command-line args.  Then start up the server.
    */
